# refunc

./: .bandit  .gitignore  .pre-commit-config.yaml  .safety-policy.json  .semgrep.yml  CHANGELOG.md  README.md  REST_API_DOCUMENTATION.md  pyproject.toml  pytest.ini  setup.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  performance.yml  pre-commit.yml  release.yml  security.yml  verify-ci.yml
benchmarks/: __init__.py  benchmark_data_science.py  benchmark_decorators.py  benchmark_file_handling.py  benchmark_utils.py  regression_detection.py
docs/: README.md  conf.py  index.rst
docs/api/: config.md  data_science.md  decorators.md  exceptions.md  index.rst  logging.md  math_stats.md  ml.md  utils.md
docs/developer/: contributing.md  contributing.rst
docs/examples/: advanced.rst  basic_usage.rst  index.rst  ml_workflow.rst  statistics.rst
docs/guides/: benchmarking.md  configuration.rst  error_handling.rst  installation.md  installation.rst  logging.rst  performance.md  performance.rst  quickstart.md  quickstart.rst  security.md
examples/: README.md
examples/basic_usage/: error_handling.py  file_handling.py  logging_setup.py
examples/data_science/: data_validation.py  preprocessing_pipeline.py  statistical_analysis.py
examples/decorators/: caching_examples.py  performance_monitoring.py  validation_examples.py
examples/integration/: end_to_end_pipeline.py  multi_module_example.py
examples/ml_workflows/: model_training.py
experiments/b853bcfc-c613-4b8c-ba95-d99760e8c10c/: metadata.json  metrics.jsonl
experiments/bb57af08-a186-42da-9338-18f6c38c4043/: metadata.json  metrics.jsonl
experiments/f91c77df-85a0-4ef9-ae5b-51d41611b1bc/: metadata.json  metrics.jsonl
refunc/: __init__.py
refunc/api/: __init__.py  main.py
refunc/api/routers/: __init__.py  data_science.py  math_stats.py  ml_ops.py  utils.py
refunc/config/: __init__.py  cli.py  core.py  schemas.py  utils.py
refunc/data_science/: __init__.py  cleaning.py  extensions.py  profiling.py  transforms.py  validation.py
refunc/decorators/: __init__.py  combined.py  memory.py  monitoring.py  timing.py  validation.py
refunc/exceptions/: __init__.py  core.py  data.py  model.py  retry.py
refunc/logging/: __init__.py  core.py  experiment.py  formatters.py  handlers.py  integrations.py  progress.py
refunc/math_stats/: __init__.py  distributions.py  numerical.py  optimization.py  statistics.py
refunc/ml/: __init__.py  evaluation.py  features.py  models.py  training.py
refunc/utils/: __init__.py  cache.py  file_handler.py  formats.py
requirements/: base.txt  dev.txt  docs.txt  security.txt  test.txt
scripts/: README.md  run_benchmarks.py  security_scan.py  setup_env.bat  setup_env.ps1  setup_env.sh  setup_venv.bat  setup_venv.ps1  setup_venv.py
test_final/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_placeholder.py
tests/integration/: README.md  __init__.py  test_complete_workflows.py  test_cross_module.py  test_performance_regression.py  test_real_world_scenarios.py
